--- a/serviceOrder/src/io/github/paulinhocorazza/screens/UserScreen.form
+++ b/serviceOrder/src/io/github/paulinhocorazza/screens/UserScreen.form
@@ -223,7 +223,7 @@
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Adicionar Usu&#xe1;rio"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Default Cursor"/>
+          <Color id="Cursor Padr&#xe3;o"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[80, 80]"/>
