--- a/serviceOrder/src/io/github/paulinhocorazza/screens/UserScreen.form
+++ b/serviceOrder/src/io/github/paulinhocorazza/screens/UserScreen.form
@@ -91,7 +91,7 @@
                       <EmptySpace min="0" pref="3" max="32767" attributes="0"/>
                       <Component id="btnCreateUser" min="-2" pref="142" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnEditUser" min="-2" pref="148" max="-2" attributes="0"/>
+                      <Component id="btnUpdateUser" min="-2" pref="148" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnReadUser" min="-2" pref="149" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -138,14 +138,16 @@
               </Group>
               <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="btnCreateUser" alignment="1" max="32767" attributes="0"/>
-                  <Component id="btnEditUser" alignment="1" max="32767" attributes="0"/>
-                  <Component id="btnDeleteUser" max="32767" attributes="0"/>
-                  <Component id="btnReadUser" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnUpdateUser" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="btnCreateUser" alignment="1" max="32767" attributes="0"/>
+                      <Component id="btnDeleteUser" max="32767" attributes="0"/>
+                      <Component id="btnReadUser" alignment="0" max="32767" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
               <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="122" max="32767" attributes="0"/>
+              <EmptySpace pref="123" max="32767" attributes="0"/>
           </Group>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
@@ -200,17 +202,6 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtUserLogin">
     </Component>
-    <Component class="javax.swing.JButton" name="btnEditUser">
-      <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/io/github/paulinhocorazza/icons/update.png"/>
-        </Property>
-        <Property name="toolTipText" type="java.lang.String" value="Editar Usu&#xe1;rio"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEditUserActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JPasswordField" name="txtUserPassword">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtUserPasswordActionPerformed"/>
@@ -237,7 +228,7 @@
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Adicionar Usu&#xe1;rio"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Default Cursor"/>
+          <Color id="Cursor Padr&#xe3;o"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[80, 80]"/>
@@ -480,7 +471,7 @@
             </Property>
             <Property name="toolTipText" type="java.lang.String" value="Adicionar Usu&#xe1;rio"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Default Cursor"/>
+              <Color id="Cursor Padr&#xe3;o"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[80, 80]"/>
@@ -531,6 +522,17 @@
         </Property>
         <Property name="text" type="java.lang.String" value="* Campos Obrigatorios"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnUpdateUser">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/io/github/paulinhocorazza/icons/update.png"/>
+        </Property>
+        <Property name="toolTipText" type="java.lang.String" value="Editar Usu&#xe1;rio"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateUserActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
